compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__module_could_not_unify3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 703
expression: "\nfn id(x: a, y: a) { x }\npub fn x() { id(1, 1.0) }"
snapshot_kind: text
---
----- SOURCE CODE

fn id(x: a, y: a) { x }
pub fn x() { id(1, 1.0) }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:20
  │
3 │ pub fn x() { id(1, 1.0) }
  │                    ^^^

Expected type:

    Int

Found type:

    Float
