compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__module_private_type_leak_3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 836
expression: "type PrivateType\n@external(erlang, \"a\", \"b\")\nfn go() -> PrivateType\npub fn leak_type() { [go()] }"
snapshot_kind: text
---
----- SOURCE CODE
type PrivateType
@external(erlang, "a", "b")
fn go() -> PrivateType
pub fn leak_type() { [go()] }

----- ERROR
error: Private type used in public interface
  ┌─ /src/one/two.gleam:4:1
  │
4 │ pub fn leak_type() { [go()] }
  │ ^^^^^^^^^^^^^^^^^^

The following type is private, but is being used by this public export.

    PrivateType

Private types can only be used within the module that defines them.
